fixed spacing and alignment per updated instructions

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -4,30 +4,30 @@
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+.App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 2em;
+  min-height: fit-content; /*There's a div in the GoogleLogin component that is set to a min of 20px*/
+  padding: 1vh;
   display: flex;
   flex-direction: row;
-  justify-content: left;
+  justify-content: right;
   align-items: center;
   position: sticky;
-  font-size: calc(8px + 2vhmin);
+  top: 0; left: 0;
+  font-size: calc(8px + 2vmin);
   color: white;
 }
 
 .App-header > svg, button {
   margin-left: 10px;
-  border: 1px solid transparent;
 }
 
 .App-header > svg, button {
@@ -35,10 +35,16 @@
   margin-right: 10px;
 }
 
+.App-header .App-logo {
+  margin-right: auto;
+  margin-left: 1vh;
+}
+
 .App-header > svg:hover, button:hover {
   cursor: pointer;
   fill: gainsboro;
 }
+
 
 .App-link {
   color: #61dafb;
